--- a/.env
+++ b/.env
@@ -8,6 +8,10 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+# Google ReCaptcha Keys (Pag dineploy na wag dapat dito)
+RECAPTCHA_SITE_KEY=6LcYKhgrAAAAACY8_1lVvVQG16BsO1q_vfVncnYY
+RECAPTCHA_SECRET_KEY=6LcYKhgrAAAAADdLVKkmDV8f_0_aD1nxE60jZr2P
+
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
