--- a/.env
+++ b/.env
@@ -8,6 +8,16 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+#For Laravel Mail to work
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=innovision2026@gmail.com
+MAIL_PASSWORD=jcjkopwsrgqegmem
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=innovision2026@gmail.com
+MAIL_FROM_NAME="ApplySmart Support"
+
 # Google ReCaptcha Keys (Pag dineploy na wag dapat dito)
 RECAPTCHA_SITE_KEY=6LcYKhgrAAAAACY8_1lVvVQG16BsO1q_vfVncnYY
 RECAPTCHA_SECRET_KEY=6LcYKhgrAAAAADdLVKkmDV8f_0_aD1nxE60jZr2P
@@ -50,15 +60,6 @@ REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
