Minor Changes: - Textbox FOCUS design - Changed email name from ApplySmart Support to ApplySmart
Signed-off-by: neoninpaul <paulaeronguillermo@gmail.com>

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ MAIL_USERNAME=innovision2026@gmail.com
 MAIL_PASSWORD=jcjkopwsrgqegmem
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=innovision2026@gmail.com
-MAIL_FROM_NAME="ApplySmart Support"
+MAIL_FROM_NAME="ApplySmart"
 
 # Google ReCaptcha Keys (Pag dineploy na wag dapat dito)
 RECAPTCHA_SITE_KEY=6LcSjxwrAAAAAAX3L668WRIaXL78Ei6l8hy9x1_O
